# cpp-backend-roadmap

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  project_structure.txt  variant_blog_draft.md
.github/workflows/: ci.yml  deploy-blog.yml  pages.yml
docs/: weekly_cpp17_notes.md
docs/blog/: mini-vector.md  variant_blog_draft.md
docs/notes/: 2025-08-22.md
leetcode/w1/2025-08-22/: problem1.cpp  problem2.cpp
leetcode/w1/2025-08-24/: problem1.cpp  problem2.cpp
leetcode/w2/2025-08-29/: problem1.cpp  problem2.cpp
leetcode/w2/2025-08-30/: problem1.cpp  problem2.cpp
leetcode/w3/2025-09-01/: problem1.cpp  problem2.cpp
leetcode/w3/2025-09-02/: problem1.cpp  problem2.cpp
leetcode/w3/2025-09-03/: problem1.cpp  problem2.cpp
leetcode/w3/2025-09-04/: problem1.cpp  problem2.cpp
leetcode/w3/2025-09-05/: problem1.cpp  problem2.cpp
leetcode/w4/2025-09-08/: problem1.cpp  problem2.cpp
leetcode/w4/2025-09-09/: problem1.cpp
leetcode/w4/2025-09-10/: problem1.cpp
mini-stl/: CMakeLists.txt
mini-stl/bench/: bench_split.cpp  visit_print.cpp
mini-stl/include/: mini_memory.h  mini_vector.h  split_view.hpp  value.hpp
mini-stl/test/: test_mini_memory.cpp  test_mini_vector.cpp
scripts/: lc_new.sh
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
